RusLangParser.py
# Generated from RusLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RusLangParser ( Parser ):

    grammarFileName = "RusLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\u0446\\u0435\\u043B'", "'\\u043B\\u043E\\u0433'", 
                     "'\\u0441\\u0442\\u0440'", "'\\u0435\\u0441\\u043B\\u0438'", 
                     "'\\u0442\\u043E\\u0433\\u0434\\u0430'", "'\\u0438\\u043D\\u0430\\u0447\\u0435\\u0435\\u0441\\u043B\\u0438'", 
                     "'\\u0438\\u043D\\u0430\\u0447\\u0435'", "'\\u043F\\u043E\\u043A\\u0430'", 
                     "'\\u0432\\u044B\\u0432\\u0435\\u0441\\u0442\\u0438'", 
                     "'\\u0438'", "'\\u0438\\u043B\\u0438'", "'\\u0438\\u0441\\u0442\\u0438\\u043D\\u0430'", 
                     "'\\u043B\\u043E\\u0436\\u044C'", "'('", "')'", "'{'", 
                     "'}'", "';'", "','", "'='", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='" ]

    symbolicNames = [ "<INVALID>", "\u0000\u0001\u0002", "\u0000\u0001\u0002", 
                      "\u0000\u0001\u0002", "\u0000\u0001\u0002\u0003", 
                      "\u0000\u0001\u0002\u0003\u0004", "\u0000\u0001\u0002\u0003\u0004\u0005\u0006\u0007\u0008", 
                      "\u0000\u0001\u0002\u0003\u0004", "\u0000\u0001\u0002\u0003", 
                      "\u0000\u0001\u0002\u0003\u0004\u0005\u0006", "\u0000", 
                      "\u0000\u0001\u0002", "\u0000\u0001\u0002\u0003\u0004\u0005", 
                      "\u0000\u0001\u0002\u0003", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "SEMICOLON", "COMMA", "ASSIGN", "PLUS", 
                      "MINUS", "MUL", "DIV", "MOD", "LT", "GT", "LE", "GE", 
                      "EQ", "NEQ", "IDENT", "INT_NUMBER", "STRING", "WS", 
                      "COMMENT", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_globalStatement = 1
    RULE_varDeclaration = 2
    RULE_varList = 3
    RULE_statement = 4
    RULE_assignmentStatement = 5
    RULE_printStatement = 6
    RULE_ifStatement = 7
    RULE_иначеЕслиPart = 8
    RULE_иначеPart = 9
    RULE_whileStatement = 10
    RULE_blockStatement = 11
    RULE_expr = 12
    RULE_orExpr = 13
    RULE_andExpr = 14
    RULE_equalityExpr = 15
    RULE_relationalExpr = 16
    RULE_additiveExpr = 17
    RULE_multiplicativeExpr = 18
    RULE_atom = 19

    ruleNames =  [ "program", "globalStatement", "varDeclaration", "varList", 
                   "statement", "assignmentStatement", "printStatement", 
                   "ifStatement", "иначеЕслиPart", "иначеPart", "whileStatement", 
                   "blockStatement", "expr", "orExpr", "andExpr", "equalityExpr", 
                   "relationalExpr", "additiveExpr", "multiplicativeExpr", 
                   "atom" ]

    EOF = Token.EOF
    ЦЕЛ=1
    ЛОГ=2
    СТР=3
    ЕСЛИ=4
    ТОГДА=5
    ИНАЧЕЕСЛИ=6
    ИНАЧЕ=7
    ПОКА=8
    ВЫВЕСТИ=9
    И=10
    ИЛИ=11
    ИСТИНА=12
    ЛОЖЬ=13
    LPAREN=14
    RPAREN=15
    LBRACE=16
    RBRACE=17
    SEMICOLON=18
    COMMA=19
    ASSIGN=20
    PLUS=21
    MINUS=22
    MUL=23
    DIV=24
    MOD=25
    LT=26
    GT=27
    LE=28
    GE=29
    EQ=30
    NEQ=31
    IDENT=32
    INT_NUMBER=33
    STRING=34
    WS=35
    COMMENT=36
    LINE_COMMENT=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(RusLangParser.EOF, 0)

        def globalStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RusLangParser.GlobalStatementContext)
            else:
                return self.getTypedRuleContext(RusLangParser.GlobalStatementContext,i)


        def getRuleIndex(self):
            return RusLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = RusLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4295033630) != 0):
                self.state = 40
                self.globalStatement()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(RusLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclaration(self):
            return self.getTypedRuleContext(RusLangParser.VarDeclarationContext,0)


        def statement(self):
            return self.getTypedRuleContext(RusLangParser.StatementContext,0)


        def getRuleIndex(self):
            return RusLangParser.RULE_globalStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalStatement" ):
                listener.enterGlobalStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalStatement" ):
                listener.exitGlobalStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalStatement" ):
                return visitor.visitGlobalStatement(self)
            else:
                return visitor.visitChildren(self)




    def globalStatement(self):

        localctx = RusLangParser.GlobalStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_globalStatement)
        try:
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.varDeclaration()
                pass
            elif token in [4, 8, 9, 16, 32]:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varList(self):
            return self.getTypedRuleContext(RusLangParser.VarListContext,0)


        def SEMICOLON(self):
            return self.getToken(RusLangParser.SEMICOLON, 0)

        def ЦЕЛ(self):
            return self.getToken(RusLangParser.ЦЕЛ, 0)

        def ЛОГ(self):
            return self.getToken(RusLangParser.ЛОГ, 0)

        def СТР(self):
            return self.getToken(RusLangParser.СТР, 0)

        def getRuleIndex(self):
            return RusLangParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = RusLangParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 53
            self.varList()
            self.state = 54
            self.match(RusLangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(RusLangParser.IDENT)
            else:
                return self.getToken(RusLangParser.IDENT, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(RusLangParser.COMMA)
            else:
                return self.getToken(RusLangParser.COMMA, i)

        def getRuleIndex(self):
            return RusLangParser.RULE_varList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarList" ):
                listener.enterVarList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarList" ):
                listener.exitVarList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarList" ):
                return visitor.visitVarList(self)
            else:
                return visitor.visitChildren(self)




    def varList(self):

        localctx = RusLangParser.VarListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(RusLangParser.IDENT)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19:
                self.state = 57
                self.match(RusLangParser.COMMA)
                self.state = 58
                self.match(RusLangParser.IDENT)
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStatement(self):
            return self.getTypedRuleContext(RusLangParser.AssignmentStatementContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(RusLangParser.PrintStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(RusLangParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(RusLangParser.WhileStatementContext,0)


        def blockStatement(self):
            return self.getTypedRuleContext(RusLangParser.BlockStatementContext,0)


        def getRuleIndex(self):
            return RusLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = RusLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        try:
            self.state = 69
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.assignmentStatement()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.printStatement()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.ifStatement()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.whileStatement()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 5)
                self.state = 68
                self.blockStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(RusLangParser.IDENT, 0)

        def ASSIGN(self):
            return self.getToken(RusLangParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(RusLangParser.ExprContext,0)


        def SEMICOLON(self):
            return self.getToken(RusLangParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return RusLangParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStatement" ):
                return visitor.visitAssignmentStatement(self)
            else:
                return visitor.visitChildren(self)




    def assignmentStatement(self):

        localctx = RusLangParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignmentStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(RusLangParser.IDENT)
            self.state = 72
            self.match(RusLangParser.ASSIGN)
            self.state = 73
            self.expr()
            self.state = 74
            self.match(RusLangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ВЫВЕСТИ(self):
            return self.getToken(RusLangParser.ВЫВЕСТИ, 0)

        def LPAREN(self):
            return self.getToken(RusLangParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(RusLangParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(RusLangParser.RPAREN, 0)

        def SEMICOLON(self):
            return self.getToken(RusLangParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return RusLangParser.RULE_printStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStatement" ):
                return visitor.visitPrintStatement(self)
            else:
                return visitor.visitChildren(self)




    def printStatement(self):

        localctx = RusLangParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_printStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(RusLangParser.ВЫВЕСТИ)
            self.state = 77
            self.match(RusLangParser.LPAREN)
            self.state = 78
            self.expr()
            self.state = 79
            self.match(RusLangParser.RPAREN)
            self.state = 80
            self.match(RusLangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ЕСЛИ(self):
            return self.getToken(RusLangParser.ЕСЛИ, 0)

        def LPAREN(self):
            return self.getToken(RusLangParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(RusLangParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(RusLangParser.RPAREN, 0)

        def ТОГДА(self):
            return self.getToken(RusLangParser.ТОГДА, 0)

        def blockStatement(self):
            return self.getTypedRuleContext(RusLangParser.BlockStatementContext,0)


        def иначеЕслиPart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RusLangParser.ИначеЕслиPartContext)
            else:
                return self.getTypedRuleContext(RusLangParser.ИначеЕслиPartContext,i)


        def иначеPart(self):
            return self.getTypedRuleContext(RusLangParser.ИначеPartContext,0)


        def getRuleIndex(self):
            return RusLangParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = RusLangParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(RusLangParser.ЕСЛИ)
            self.state = 83
            self.match(RusLangParser.LPAREN)
            self.state = 84
            self.expr()
            self.state = 85
            self.match(RusLangParser.RPAREN)
            self.state = 86
            self.match(RusLangParser.ТОГДА)
            self.state = 87
            self.blockStatement()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 88
                self.иначеЕслиPart()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 94
                self.иначеPart()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ИначеЕслиPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ИНАЧЕЕСЛИ(self):
            return self.getToken(RusLangParser.ИНАЧЕЕСЛИ, 0)

        def LPAREN(self):
            return self.getToken(RusLangParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(RusLangParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(RusLangParser.RPAREN, 0)

        def ТОГДА(self):
            return self.getToken(RusLangParser.ТОГДА, 0)

        def blockStatement(self):
            return self.getTypedRuleContext(RusLangParser.BlockStatementContext,0)


        def getRuleIndex(self):
            return RusLangParser.RULE_иначеЕслиPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterИначеЕслиPart" ):
                listener.enterИначеЕслиPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitИначеЕслиPart" ):
                listener.exitИначеЕслиPart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitИначеЕслиPart" ):
                return visitor.visitИначеЕслиPart(self)
            else:
                return visitor.visitChildren(self)




    def иначеЕслиPart(self):

        localctx = RusLangParser.ИначеЕслиPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_иначеЕслиPart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(RusLangParser.ИНАЧЕЕСЛИ)
            self.state = 98
            self.match(RusLangParser.LPAREN)
            self.state = 99
            self.expr()
            self.state = 100
            self.match(RusLangParser.RPAREN)
            self.state = 101
            self.match(RusLangParser.ТОГДА)
            self.state = 102
            self.blockStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ИначеPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ИНАЧЕ(self):
            return self.getToken(RusLangParser.ИНАЧЕ, 0)

        def blockStatement(self):
            return self.getTypedRuleContext(RusLangParser.BlockStatementContext,0)


        def getRuleIndex(self):
            return RusLangParser.RULE_иначеPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterИначеPart" ):
                listener.enterИначеPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitИначеPart" ):
                listener.exitИначеPart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitИначеPart" ):
                return visitor.visitИначеPart(self)
            else:
                return visitor.visitChildren(self)




    def иначеPart(self):

        localctx = RusLangParser.ИначеPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_иначеPart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(RusLangParser.ИНАЧЕ)
            self.state = 105
            self.blockStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ПОКА(self):
            return self.getToken(RusLangParser.ПОКА, 0)

        def LPAREN(self):
            return self.getToken(RusLangParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(RusLangParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(RusLangParser.RPAREN, 0)

        def blockStatement(self):
            return self.getTypedRuleContext(RusLangParser.BlockStatementContext,0)


        def getRuleIndex(self):
            return RusLangParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = RusLangParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(RusLangParser.ПОКА)
            self.state = 108
            self.match(RusLangParser.LPAREN)
            self.state = 109
            self.expr()
            self.state = 110
            self.match(RusLangParser.RPAREN)
            self.state = 111
            self.blockStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(RusLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(RusLangParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RusLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(RusLangParser.StatementContext,i)


        def getRuleIndex(self):
            return RusLangParser.RULE_blockStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStatement" ):
                listener.enterBlockStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStatement" ):
                listener.exitBlockStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStatement" ):
                return visitor.visitBlockStatement(self)
            else:
                return visitor.visitChildren(self)




    def blockStatement(self):

        localctx = RusLangParser.BlockStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_blockStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(RusLangParser.LBRACE)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4295033616) != 0):
                self.state = 114
                self.statement()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self.match(RusLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orExpr(self):
            return self.getTypedRuleContext(RusLangParser.OrExprContext,0)


        def getRuleIndex(self):
            return RusLangParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = RusLangParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.orExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def andExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RusLangParser.AndExprContext)
            else:
                return self.getTypedRuleContext(RusLangParser.AndExprContext,i)


        def ИЛИ(self, i:int=None):
            if i is None:
                return self.getTokens(RusLangParser.ИЛИ)
            else:
                return self.getToken(RusLangParser.ИЛИ, i)

        def getRuleIndex(self):
            return RusLangParser.RULE_orExpr

